Now downloading with primitive method.

--- a/app/src/main/assets/apps.json
+++ b/app/src/main/assets/apps.json
@@ -66,7 +66,7 @@
     {
       "name":"Filmy",
       "developer":"salroid",
-      "download-link":"http://www.apkmirror.com/wp-content/uploads/uploaded/58df17e9833fd/net.oneplus.weather_1.6.0.170321141128.ab33882-200_minAPI23(nodpi)_apkmirror.com.apk",
+      "download-link":"http://bit.ly/2oMRZzm",
       "app_icon":"https://lh3.googleusercontent.com/ZsRTpd5O6IH5Rj9PHoeT1EeryLOiLT8f3wo2pp_7Am_MX33542EOQhduOzPzHHo7gyR4=w300-rw",
       "stars":4.4
     },
